--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+
+# Visual Studio Code IDE
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
 # Logs
 logs
 *.log
